--- a/src/lib/lib.ioc
+++ b/src/lib/lib.ioc
@@ -5,22 +5,26 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USB_DEVICE
-Mcu.IP4=USB_OTG_HS
-Mcu.IPNb=5
+Mcu.IP2=RTC
+Mcu.IP3=SYS
+Mcu.IP4=USB_DEVICE
+Mcu.IP5=USB_OTG_HS
+Mcu.IPNb=6
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PH0/OSC_IN
-Mcu.Pin1=PH1/OSC_OUT
-Mcu.Pin2=PB13
-Mcu.Pin3=PB14
-Mcu.Pin4=PB15
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.PinsNb=9
+Mcu.Pin0=PC14/OSC32_IN
+Mcu.Pin1=PC15/OSC32_OUT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin2=PH0/OSC_IN
+Mcu.Pin3=PH1/OSC_OUT
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PB15
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_RTC_VS_RTC_Activate
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -52,6 +56,10 @@ PB15.GPIOParameters=GPIO_Speed
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB15.Mode=Device_Only_FS
 PB15.Signal=USB_OTG_HS_DP
+PC14/OSC32_IN.Mode=LSE-External-Oscillator
+PC14/OSC32_IN.Signal=RCC_OSC32_IN
+PC15/OSC32_OUT.Mode=LSE-External-Oscillator
+PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
@@ -101,9 +109,8 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RCC_RTC_Clock_Source,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 RCC.LCDTFTFreq_Value=24500000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
@@ -111,7 +118,8 @@ RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
-RCC.RTCFreq_Value=32000
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI_AClocksFreq_Value=24500000
 RCC.SAI_BClocksFreq_Value=24500000
@@ -131,6 +139,8 @@ USB_DEVICE.VirtualMode-CDC_HS=Cdc
 USB_DEVICE.VirtualModeHS=Cdc_HS
 USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS
 USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
